--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+   <h1>Task List</h1> 
+   <p id="msg">Current Tasks:</p>
+   <ul>
+       <li class="list">Add Visual styles</li>
+       <li class="list">Add Light and Dark theme</li>
+       <li>Enable switching the theme</li>
+    </ul>
 </body>
 </html>
