--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Website</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="dark-theme">
    <h1>Task List</h1> 
    <p id="msg">Current Tasks:</p>
    <ul>
