--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Website</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body class="dark-theme">
+<body class="light-theme">
    <h1>Task List</h1> 
    <p id="msg">Current Tasks:</p>
    <ul>
@@ -15,5 +15,10 @@
        <li class="list">Add Light and Dark theme</li>
        <li>Enable switching the theme</li>
     </ul>
+    <div>
+        <button class="btn">Dark</button>
+    </div>
+    <script src="app.js"></script>
+    <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
